hidden overflow on body to prevent scroll/other elements beign seen

--- a/css/main.css
+++ b/css/main.css
@@ -14,7 +14,8 @@ html {
 
 body {
   box-sizing: border-box;
-  min-height: 100%; }
+  min-height: 100%;
+  overflow: hidden; }
 
 @keyframes foging {
   0% {
