--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -21,6 +21,7 @@ html {
 body {
     box-sizing: border-box;
     min-height: 100%;
+    overflow: hidden;
 }
 
 
